--- a/pets/index.html
+++ b/pets/index.html
@@ -8,66 +8,88 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="contenedor">
-        <header class="encabezado">
-            <img src="img/image.png" alt="Logo" class="logo">
-            <div class="search-bar">
-                <input type="text" id="search-input" class="barra-busqueda" placeholder="Buscar...">
-            </div>
-        </header>
-        <main>
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/Perro2.jfif" class="d-block" alt="perro2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/perro10.jfif" class="d-block" alt="perro10">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/perro7.jfif" class="d-block" alt="perro7">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+    <header class="encabezado">
+        <img src="img/logo pets.png" alt="Logo pets" class="logo pets">
+        <div class="search-bar">
+            <input type="text" id="search-input" class="barra-busqueda" placeholder="Buscar...">
+        </div>
+    </header>
 
-            <section class="vet-locations">
-                <h2>Veterinarias en la zona</h2>
+    <nav class="nav-bar">
+        <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#about">Sobre nosotros</a></li>
+            <li><a href="#services">Servicios</a></li>
+            <li><a href="#contact">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/perro1.jfif" class="d-block" alt="perro1">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/perro2.jfif" class="d-block" alt="perro2">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/perro3.jfif" class="d-block" alt="perro3">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/gato1.jfif" class="d-block" alt="gato1">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/gato2.jfif" class="d-block" alt="gato2">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/gato3.jpg" class="d-block" alt="gato3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <section class="vet-locations">
+            <h2>Veterinarias en la zona</h2>
+            <div class="vet-container">
                 <button data-localidad="villa giardino" onclick="location.href='link_villa_giardino.html'">Villa Giardino</button>
                 <button data-localidad="huerta grande" onclick="location.href='link_huerta_grande.html'">Huerta Grande</button>
                 <button data-localidad="valle hermoso" onclick="location.href='link_valle_hermoso.html'">Valle Hermoso</button>
                 <button data-localidad="la falda" onclick="location.href='link_la_falda.html'">La Falda</button>
-            </section>
-        </main>
-
-        <footer> 
-            <a href="mailto:ayuda@ejemplo.com" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px;">Ayuda</a>
-            <div style="margin-top: 10px;">
-                <a href="https://www.facebook.com" target="_blank">
-                    <img src="img/face.png" alt="Facebook" style="width: 24px; height: 24px; margin: 0 5px;"/>
-                </a>
-                <a href="https://www.twitter.com" target="_blank">
-                    <img src="img/twiter.png" alt="Twitter" style="width: 24px; height: 24px; margin: 0 5px;"/>
-                </a>
-                <a href="https://www.instagram.com" target="_blank">
-                    <img src="img/instagram.jfif" alt="Instagram" style="width: 24px; height: 24px; margin: 0 5px;"/>
-                </a>
             </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="js/app.js"></script>
-    </div>
+        </section>
+    </main>
+
+    <footer> 
+        <a href="mailto:ayuda@ejemplo.com" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px;">Ayuda</a>
+        <div style="margin-top: 10px;">
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="img/face.png" alt="Facebook" style="width: 24px; height: 24px; margin: 0 5px;"/>
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+                <img src="img/twiter.png" alt="Twitter" style="width: 24px; height: 24px; margin: 0 5px;"/>
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="img/instagram.jfif" alt="Instagram" style="width: 24px; height: 24px; margin: 0 5px;"/>
+            </a>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
